fix login errors

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,8 +11,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/background_gray"
-        tools:context=".Login.LoginActivity">
+        android:background="@color/background_gray">
 
         <ImageView
             android:id="@+id/topCircle"
