--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,155 +1,166 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_gray"
-    tools:context=".Login.LoginActivity">
+    tools:context=".Login.LoginActivity"
+    android:fillViewport="true">
 
-    <ImageView
-        android:id="@+id/topCircle"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:background="@drawable/top_circle"
-        app:layout_constraintEnd_toEndOf="parent"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="-20dp"
-        android:layout_marginEnd="-50dp"
-        android:contentDescription="@string/cd_top_circle"/>
-
-    <LinearLayout
-        android:layout_width="320dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/linearlayout_background"
-        android:gravity="center_vertical"
-        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:elevation="2dp">
+        app:layout_constraintHeight_default="wrap"
+        android:background="@color/background_gray">
 
-        <TextView
-            android:id="@+id/tvLoginHeadline"
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/topCircle"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginTop="-20dp"
+            android:layout_marginEnd="-50dp"
+            android:background="@drawable/top_circle"
+            android:contentDescription="@string/cd_top_circle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <LinearLayout
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/tv_login_headline"
-            android:textColor="@color/blue_shade_2"
-            android:textSize="40sp"
-            android:textStyle="bold"
-            android:layout_marginTop="30dp" />
-
-        <LinearLayout
-            android:layout_width="260dp"
-            android:layout_height="match_parent"
+            android:background="@drawable/linearlayout_background"
+            android:elevation="2dp"
+            android:gravity="center_vertical"
             android:orientation="vertical"
-            android:paddingVertical="30dp"
-            android:layout_gravity="center">
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                android:id="@+id/tvUsername"
+                android:id="@+id/tvLoginHeadline"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="5dp"
-                android:text="@string/tv_username"
-                android:textColor="@color/black"
-                android:textSize="18sp"
+                android:layout_marginTop="30dp"
+                android:gravity="center"
+                android:text="@string/tv_login_headline"
+                android:textColor="@color/blue_shade_2"
+                android:textSize="40sp"
                 android:textStyle="bold" />
 
-            <EditText
-                android:id="@+id/etUsername"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:autofillHints="username"
-                android:background="@drawable/edittext_background"
-                android:drawableStart="@drawable/username_icon_drawable"
-                android:drawablePadding="8dp"
-                android:ems="10"
-                android:hint="@string/et_username"
-                android:inputType="text"
-                android:minHeight="48dp" />
-        </LinearLayout>
+            <LinearLayout
+                android:layout_width="260dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:orientation="vertical"
+                android:paddingVertical="30dp">
 
-        <LinearLayout
-            android:id="@+id/test"
-            android:layout_width="260dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingVertical="30dp"
-            android:layout_gravity="center">
-
-            <TextView
-                android:id="@+id/tvPassword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="5dp"
-                android:text="@string/tv_password"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <EditText
-                    android:id="@+id/etPassword"
+                <TextView
+                    android:id="@+id/tvUsername"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:autofillHints="password"
+                    android:paddingBottom="5dp"
+                    android:text="@string/tv_username"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/etUsername"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:autofillHints="username"
                     android:background="@drawable/edittext_background"
-                    android:drawableStart="@drawable/password_icon_drawable"
+                    android:drawableStart="@drawable/username_icon_drawable"
                     android:drawablePadding="8dp"
                     android:ems="10"
-                    android:hint="@string/et_password"
-                    android:inputType="textPassword"
+                    android:hint="@string/et_username"
+                    android:inputType="text"
                     android:minHeight="48dp" />
+            </LinearLayout>
 
-                <ImageButton
-                    android:id="@+id/btnShowPassword"
-                    android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/test"
+                android:layout_width="260dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:orientation="vertical"
+                android:paddingVertical="30dp">
+
+                <TextView
+                    android:id="@+id/tvPassword"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="end|center_vertical"
-                    android:background="@android:color/transparent"
-                    android:src="@drawable/show_password_icon_drawable"
-                    android:contentDescription="@string/cd_show_password"/>
-            </FrameLayout>
+                    android:paddingBottom="5dp"
+                    android:text="@string/tv_password"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/etPassword"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:autofillHints="password"
+                        android:background="@drawable/edittext_background"
+                        android:drawableStart="@drawable/password_icon_drawable"
+                        android:drawablePadding="8dp"
+                        android:ems="10"
+                        android:hint="@string/et_password"
+                        android:inputType="textPassword"
+                        android:minHeight="48dp" />
+
+                    <ImageButton
+                        android:id="@+id/btnShowPassword"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end|center_vertical"
+                        android:background="@android:color/transparent"
+                        android:contentDescription="@string/cd_show_password"
+                        android:src="@drawable/show_password_icon_drawable" />
+                </FrameLayout>
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/linkToRegister"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/tv_link_to_register"
+                android:textStyle="normal|bold" />
+
+            <Button
+                android:id="@+id/btnLogin"
+                android:layout_width="185dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="30dp"
+                android:background="@drawable/rounded_button_background"
+                android:gravity="center"
+                android:text="@string/btn_login"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/linkToRegister"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/tv_link_to_register"
-            android:layout_gravity="center"
-            android:textStyle="normal|bold" />
-
-        <Button
-            android:id="@+id/btnLogin"
-            android:layout_width="185dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="30dp"
-            android:background="@drawable/rounded_button_background"
-            android:gravity="center"
-            android:text="@string/btn_login"
-            android:textColor="@color/white"
-            android:textSize="20sp" />
-
-    </LinearLayout>
-
-    <ImageView
-        android:id="@+id/bottomCircle"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:background="@drawable/bottom_circle"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginBottom="-20dp"
-        android:layout_marginStart="-50dp"
-        android:contentDescription="@string/cd_bottom_circle"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/bottomCircle"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginStart="-50dp"
+            android:layout_marginBottom="-20dp"
+            android:background="@drawable/bottom_circle"
+            android:contentDescription="@string/cd_bottom_circle"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
