--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Contacts.ContactsActivity">
+    tools:context=".Contacts.ContactsActivity"
     android:background="@color/background_gray">
 
     <LinearLayout
@@ -137,11 +137,10 @@
                 android:text="2"
                 android:gravity="center"
                 android:textColor="@color/white"
-                android:layout_gravity="center"
                 android:layout_width="22dp"
                 android:layout_height="22dp"
                 android:layout_gravity="center"
-                android:background="@drawable/notification_circle"
+                android:background="@drawable/notification_circle"/>
         </LinearLayout>
     </FrameLayout>
 
@@ -150,9 +149,7 @@
         android:id="@+id/btnAddContact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/light_blue"
         android:clickable="true"
-        android:contentDescription="@string/cd_add_new_contact"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.954"
@@ -160,7 +157,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.989"
         app:srcCompat="@drawable/ic_add_contact"
-
         android:background="@color/blue_shade_2"
         android:layout_marginBottom="10dp"
         android:layout_marginEnd="10dp"
