--- a/app/src/main/res/drawable/my_text_bubble_drawable.xml
+++ b/app/src/main/res/drawable/my_text_bubble_drawable.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/blue_shade_4" /> <!-- Set the background color of the bubble -->
-    <corners android:radius="16dp" /> <!-- Set the corner radius of the bubble -->
+    <solid android:color="@color/blue_shade_4" />
+    <corners android:radius="16dp" />
 </shape>
