--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -6,14 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ChatActivity"
-    android:background="@color/background_gray">
-
+    style="@style/SCREEN">
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@drawable/contacts_bar"
+        style="@style/STATUS_BAR"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -27,7 +26,7 @@
             android:layout_marginEnd="5dp"
             android:layout_weight="0.1"
             android:adjustViewBounds="true"
-            android:background="@color/blue_shade_2"
+            android:background="@android:color/transparent"
             app:srcCompat="@drawable/ic_exit" />
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -61,10 +60,9 @@
             android:id="@+id/tvDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/chat_date_bubble_drawable"
+            style="@style/DATE_BUBBLE"
             android:padding="8dp"
             android:text="08.06.2023"
-            android:textColor="@color/white"
             android:layout_gravity="center"
             android:layout_marginEnd="10dp"
             android:layout_marginTop="10dp"/>
@@ -72,7 +70,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/contact_text_bubble_drawable"
+            style="@style/CONTACT_BUBBLE"
             android:padding="10dp"
             android:orientation="vertical"
             android:layout_gravity="end"
@@ -84,7 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Hello, this is a text bubble!"
-                android:textColor="@color/black"
+                style="@style/TEXT"
                 android:layout_gravity="end"
                 android:paddingBottom="5dp"/>
 
@@ -94,13 +92,14 @@
                 android:layout_height="wrap_content"
                 android:text="15:01"
                 android:layout_gravity="end"
-                android:textSize="12sp"/>
+                android:textSize="12sp"
+                style="@style/TEXT"/>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/my_text_bubble_drawable"
+            style="@style/MY_BUBBLE"
             android:padding="10dp"
             android:orientation="vertical"
             android:layout_gravity="start"
@@ -112,7 +111,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Hello, this is a text bubble!"
-                android:textColor="@color/black"
+                style="@style/TEXT"
                 android:layout_gravity="end"
                 android:paddingBottom="5dp"/>
 
@@ -122,7 +121,8 @@
                 android:layout_height="wrap_content"
                 android:text="15:02"
                 android:layout_gravity="end"
-                android:textSize="12sp"/>
+                android:textSize="12sp"
+                style="@style/TEXT"/>
         </LinearLayout>
 
     </LinearLayout>
@@ -130,7 +130,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/background_gray"
+        style="@style/SCREEN"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -142,7 +142,7 @@
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="5dp"
             android:layout_weight="1"
-            android:background="@drawable/send_message_edit_text"
+            style="@style/SEND_MESSAGE_EDIT_TEXT"
             android:ems="10"
             android:hint="@string/ed_new_message_hint"
             android:inputType="text"
@@ -155,7 +155,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
-            android:background="@color/blue_shade_2"
+            style="@style/FLOATING_ACTION_BUTTON"
             android:clickable="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
