--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -129,14 +129,38 @@
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/linkToRegister"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/tv_link_to_register"
-                android:textStyle="normal|bold"
-                style="@style/TEXT"/>
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/linkToRegister1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/tv_link_to_register_1"
+                    android:textStyle="normal|bold"
+                    style="@style/TEXT"/>
+                <TextView
+                    android:id="@+id/linkToRegister2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/tv_link_to_register2"
+                    android:textStyle="normal|bold"
+                    style="@style/LINK_TO_TEXT"
+                    android:layout_marginStart="3dp"/>
+                <TextView
+                    android:id="@+id/linkToRegister3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/tv_link_to_register3"
+                    android:textStyle="normal|bold"
+                    android:layout_marginStart="3dp"
+                    style="@style/TEXT"/>
+            </LinearLayout>
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnLogin"
