--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -237,14 +237,39 @@
                     android:textSize="18sp"/>
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/linkToRegister"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/tv_link_to_login"
                 android:layout_gravity="center"
-                android:textStyle="normal|bold"
-                style="@style/TEXT"/>
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/linkToLogin1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/tv_link_to_login1"
+                    android:textStyle="normal|bold"
+                    style="@style/TEXT"/>
+                <TextView
+                    android:id="@+id/linkToLogin2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/tv_link_to_register2"
+                    android:textStyle="normal|bold"
+                    style="@style/LINK_TO_TEXT"
+                    android:layout_marginStart="3dp"/>
+                <TextView
+                    android:id="@+id/linkToLogin3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/tv_link_to_login2"
+                    android:textStyle="normal|bold"
+                    android:layout_marginStart="3dp"
+                    style="@style/TEXT"/>
+            </LinearLayout>
+
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnRegister"
