--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -31,6 +31,11 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <!-- link to button background if dark mode on -->
+    <style name="LINK_TO_TEXT">
+        <item name="android:textColor">@color/blue_shade_2</item>
+    </style>
+
     <!-- Edit texts background if dark mode on -->
     <style name="EDIT_TEXT">
         <item name="android:background">@drawable/edittext_dark_background</item>
