--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Contacts.ContactsActivity"
-    style="@style/BLOCK_SCREEN">
+    style="@style/STATUS_BAR">
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -63,89 +63,6 @@
             app:srcCompat="@drawable/ic_logout" />
     </LinearLayout>
 
-    <FrameLayout
-        android:id="@+id/frameLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
-
-        <TableLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="40dp">
-
-                <TextView
-                    android:id="@+id/tvContactName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="60dp"
-                    android:text="Daniel Cohen Shor"
-                    style="@style/TEXT"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="end">
-
-                    <TextView
-                        android:id="@+id/tvTime"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginEnd="10dp"
-                        android:text="10:53"
-                        android:textSize="15sp"
-                        style="@style/TEXT"/>
-
-                </LinearLayout>
-            </TableRow>
-
-        </TableLayout>
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/contactImg"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/picture1"
-            app:civ_border_color="@color/black"
-            android:layout_marginStart="5dp"/>
-
-        <TextView
-            android:id="@+id/tvLastMessage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_marginStart="80dp"
-            android:text="Hey! What's up?"
-            android:textSize="15sp"
-            style="@style/TEXT"/>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="8dp">
-
-            <TextView
-                android:id="@+id/tvNotification"
-                android:text="2"
-                android:gravity="center"
-                android:layout_width="22dp"
-                android:layout_height="22dp"
-                android:layout_gravity="center"
-                style="@style/NOTIFICATION"/>
-        </LinearLayout>
-    </FrameLayout>
-
-
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnAddContact"
         style="@style/FLOATING_ACTION_BUTTON"
@@ -160,22 +77,11 @@
         app:srcCompat="@drawable/ic_add_contact"
         app:tint="@android:color/white" />
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:foregroundGravity="top"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
-        tools:layout_editor_absoluteX="0dp">
-
-    </FrameLayout>
-
     <ListView
         android:id="@+id/listViewContacts"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
-        app:layout_constraintVertical_bias="0.089"
-        tools:layout_editor_absoluteX="-12dp" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        style="@style/BLOCK_SCREEN_WITH_STATUS_BAR"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
